src/objects/Emails__c.object
<CustomObject>
    <description>Used to track Emails for a contact and consent along with it. Required for GDPR and other data privacy and anti-spam regulations. 
Object populated and updated by the system based on email updates/changes from the contact.</description>
    <fields>
        <fullName>Consent_Collected_by__c</fullName>
        <description>Tracks who collected the consent</description>
        <label>Consent Collected by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Collection_Method__c</fullName>
        <description>Used to track how the consent was collected.</description>
        <label>Consent Collection Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verbally Phone</fullName>
                </value>
                <value>
                    <fullName>Verbally Face-To-Face</fullName>
                </value>
                <value>
                    <fullName>Digitally</fullName>
                </value>
                <value>
                    <fullName>Hard Copy Signed Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Emails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Double_opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track where we have a double opt-in in countries that require this.</description>
        <label>Double opt in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Marketing_Consent_Date__c</fullName>
        <description>Tracks when the consent was collected</description>
        <label>Email Marketing Consent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Marketing_Consent__c</fullName>
        <label>Email Marketing Consent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Please Select Yes or No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>The email address</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email opt out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True if the email is no longer in use</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WhenCollected__c</fullName>
        <label>When collected?</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WhereCollected__c</fullName>
        <label>Where collected?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Email Consent Tracking</label>
    <nameField>
        <label>Emails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Emails Consent Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>